--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,4 @@
-<!--These brakets are known as interpolation -->
-<h1>{{title}}</h1>
-<ul>
-  <!-- Structural directive -->
-  <li *ngFor='let user of users'>{{user.id}}- {{user.userName}}</li>
-</ul>
+<app-nav></app-nav>
+<div class="container" style="margin-top: 200px;">
+  <app-home></app-home>
+</div>
