--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-nav></app-nav>
-<div class="container" style="margin-top: 200px;">
-  <app-home></app-home>
+<div class="container" style="margin-top: 100px;">
+  <router-outlet></router-outlet>
 </div>
