--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -13,6 +13,9 @@
                     <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
                 </li>
             </ng-container>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/errors" routerLinkActive="active">Errors</a>
+            </li>
         </ul>
         <!--With async  pipe we automatically unsubscribe if our nav component is no longer visible or in use  -->
         <div class="dropdown" *ngIf="(accountService.currentUser$| async) as user" dropdown>
