--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,5 +1,6 @@
 <div class="row">
-    <div *ngFor="let member of members" class="col-2">
+    <!--async pipe is being used to subscribe to the Observable-->
+    <div *ngFor="let member of members$ |async" class="col-2">
         <app-member-card [member]="member"></app-member-card>
     </div>
 </div>
