--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="card-footer">
-                <button [disabled]="!editForm.dirty" form="editForm" class="btn btn-success btn-block">Save
+                <button [disabled]="!editForm.dirty"  form="editForm" class="btn btn-success btn-block">Save
                     Changes</button>
             </div>
         </div>
@@ -59,7 +59,7 @@
             </tab>
 
             <tab heading="Edit Photos">
-                <p>Photo edit will go here</p>
+                <app-photo-editor [member]="member"></app-photo-editor>
             </tab>
         </tabset>
     </div>
