--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,15 +1,31 @@
-<form #registerFrom="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
     <h2 class="text-center text-primary">Sign up</h2>
     <hr>
     <div class="form-group">
-        <input type="text" class="form-control" name="username" [(ngModel)]="model.username" placeholder="UserName">
+        <label class="control-label" style="margin-right: 10px;">I am a:</label>
+        <label class="radio-inline">
+            <input type="radio" value="male" formControlName="gender"> Male
+        </label>
+        <label class="radio-inline">
+            <input type="radio" value="female" formControlName="gender" class="ml-3"> Female
+        </label>
     </div>
+    <app-text-input [formControl]='registerForm.controls["username"]' [label]='"Username"'></app-text-input>
+    <app-text-input [formControl]='registerForm.controls["knownAs"]' [label]='"Known As"'></app-text-input>
+    <app-text-input [formControl]='registerForm.controls["dateOfBirth"]' [label]='"Date Of Birth"'></app-text-input>
+    <app-text-input [formControl]='registerForm.controls["city"]' [label]='"City"'></app-text-input>
+    <app-text-input [formControl]='registerForm.controls["country"]' [label]='"Country"'></app-text-input>
 
-    <div class="form-group">
-        <input type="password" class="form-control" name="password" [(ngModel)]="model.password" placeholder="Password">
-    </div>
+    <app-text-input [formControl]='registerForm.controls["password"]' [label]='"Password"' [type]='"password"'>
+    </app-text-input>
+    <app-text-input [formControl]='registerForm.controls["confirmPassword"]' [label]='"Confirm Password"'
+        [type]='"password"'></app-text-input>
     <div class="form-group text-center">
         <button class="btn btn-dark mr-2" type="submit">Register</button>
         <button class="btn btn-success mr-2" (click)="cancel()" type="button">Cancel</button>
     </div>
 </form>
+
+<p>Form value: {{registerForm.value | json}} </p>
+<p>Form valid: {{registerForm.valid | json}} </p>
+<p>Form status: {{registerForm.status | json}} </p>
