--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -1,14 +1,10 @@
 <div class="card">
-    <div class="card-body">
+    <div class="card-body" #scrollMe style="overflow: scroll; height: 535px;" [scrollTop]="scrollMe.scrollHeight">
         <div *ngIf="(messageService.messageThread$ | async)?.length === 0">
             No messages yet... say hi using the message box below
         </div>
 
-        <ul #scrollMe
-        style="overflow: scroll; height: 500px;"
-        [scrollTop]="scrollMe.scrollHeight"
-        *ngIf="(messageService.messageThread$ | async)?.length > 0" 
-        class="chat">
+        <ul *ngIf="(messageService.messageThread$ | async)?.length > 0" class="chat">
             <li *ngFor="let message of (messageService.messageThread$ | async)">
                 <div>
                     <span class="chat-img float-right">
@@ -41,7 +37,9 @@
                 <input type="text" name="messageContent" [(ngModel)]="messageContent" required
                     class="form-control input-sm" placeholder="Send a private message">
                 <div class="input-group-append">
-                    <button [disabled]="!messageForm.valid" class="btn btn-primary" type="submit">Send</button>
+                    <button [disabled]="!messageForm.valid || loading" class="btn btn-primary" type="submit">Send
+                        <i *ngIf="loading" class="fa fa-spinner fa-spin"></i>
+                    </button>
                 </div>
             </div>
         </form>
